# snippets

./: .gitignore  TODO
boost/hana/Animals/: compile_commands.json
boost/hana/Animals/src/: main.cpp
boost/hana/BaseStore/src/: main.cpp  utils.h
boost/hana/Clonable/: CMakeLists.txt  compile_commands.json
boost/hana/Clonable/src/: main.cpp  utils.h
common_lisp/alg_lin/: mat_mult.lisp
cpp_conf/c++now/2017/abusing_c++17/DeductionGuides/: CMakeLists.txt  README  main.cpp
cpp_conf/cppcon/2014/modern_template_metaprogramming/Rank/: main.cpp
cpp_conf/cppcon/2014/mtmp_compendium/CopyAssignable/: main.cpp
cpp_conf/cppcon/2014/mtmp_compendium/EnableIf/: main.cpp
cpp_conf/cppcon/2014/mtmp_compendium/If/: main.cpp
cpp_conf/cppcon/2014/mtmp_compendium/IsSame/: main.cpp
cpp_conf/cppcon/2014/mtmp_compendium/Rank/: main.cpp
cpp_conf/cppcon/2018/: CMakeLists.txt
cpp_conf/cppcon/2018/src/: Event.h  State.cpp  State.h  fsm.h  main.cpp
cpp_random/meta/EnableIfWVariadicParameterPack/: main.cpp
effective_c++/item15/ref/: compile_commands.json  main.cpp
effective_c++/item27/UniRefOverload/: CMakeLists.txt  main.cpp  metautils.h
fluent_cpp/SmartCovariance/: CMakeLists.txt  compile_commands.json  tags
fluent_cpp/SmartCovariance/headers/: utils.h
fluent_cpp/SmartCovariance/src/: .utils.h.swp  main.cpp  utils.h
haskell/stack-ex/: README.md  stack-ex.cabal
haskell/statemon/: Main.hs  Main.hs.bu
haskell/ternary-monoid/: Main.hs
haskell/wind-speed/: .gitignore  :w  ChangeLog.md  README.md  package.yaml
haskell/wind-speed/src/: Lib.hs
haskell_wiki/foldable/: monoid_example.hs
lua_libs/primes/: primes.lua  test.lua
multi_experiments/csemaphores/: CMakeLists.txt  README.md
multi_experiments/csemaphores/src/: main.c
multi_experiments/primes/: CMakeLists.txt  README.md
multi_experiments/primes/src/: a.out  main.cpp
multi_experiments/primes/versions/futures/: main.cpp
multi_experiments/primes/versions/oob/src/: main.cpp
multi_experiments/primes/versions/threads/src/: main.cpp
perl6_fundamentals/date/: autotime.p6
perl6_fundamentals/sudoku/: main.p6
practical_meta/2/ArrayToTuple/: README  main.cpp
practical_meta/2/DispatchFunctions/: main.cpp
practical_meta/2/DispatchParams/: main.cpp
practical_meta/2/DispatchToLegacy/: CMakeLists.txt  main.cpp
practical_meta/2/MagicWand/: main.cpp
practical_meta/2/MakeTupleOfParams/: CMakeLists.txt  main.cpp
practical_meta/2/PrintTuple/: main.cpp
practical_meta/3/ListSize/: main.cpp
pradella/haskell/: Playground.hs
pradella/haskell/applicative-list/: Lib.hs
pradella/haskell/applicative-tree/: Main.hs
pradella/haskell/fib/: fib.hs
pradella/haskell/infix-list/: main.hs
pradella/haskell/powerset/: powerset.hs
pradella/haskell/prc-record-monad/: Main.hs
pradella/haskell/rat/: rat.hs
pradella/haskell/record-monad/: Main.hs
pradella/haskell/split-at/: SplitAt.hs
pradella/haskell/tree-lib/: tree.hs
pradella/racket/: exceptions.rkt  playground.rkt  playground2.rkt
programming_in_lua/oop/: Account.lua
programming_in_lua/oop/Account/: Account.lua  SpecialAccount.lua  test.lua
programming_in_lua/read_only/: main.lua
programming_in_lua/regex/: html.lua  latex_to_xml.lua  test.lua
programming_in_lua/require/: main.lua  utils.lua
programming_in_lua/str/: sub.lua
programming_in_lua/tail/: main.lua
programming_in_lua/track/: main.lua
programming_in_lua/utils/: stringify.lua
real_world_haskell/chapter2/: lastButOne.hs
real_world_haskell/chapter4/Capitalize/: Capitalize.hs  input  output
real_world_haskell/chapter4/FixLines/: FixLines.hs  input  output
real_world_haskell/chapter4/ListBasics/: ListBasics.hs
real_world_haskell/chapter4/USplitLines/: USplitLines.hs
real_world_haskell/chapter5/simple-json/: PrettyJSON.hs  SimpleJSON.hs
real_world_haskell/command_line_ex/: InteractWith.hs
rust/infinity/: Cargo.toml
rust/infinity/src/: main.rs
rust/little_macro_book/recurrence/: Cargo.toml
rust/little_macro_book/recurrence/src/: main.rs
rust/nalgebra/simple_matrix/: Cargo.toml
rust/nalgebra/simple_matrix/src/: main.rs
rust/niebler_calendar/: Cargo.toml
rust/niebler_calendar/src/: main.rs
rust/parsec_tut/: Cargo.toml
rust/parsec_tut/src/: lib.rs  main.rs
rust/rust_book/asref_str_slices/src/: main.rs
rust/rust_book/channel/src/: main.rs
rust/rust_book/chapter10/important_excerpt/: Cargo.toml
rust/rust_book/chapter10/important_excerpt/src/: main.rs
rust/rust_book/chapter10/longest_string/: Cargo.toml
rust/rust_book/chapter10/longest_string/src/: main.rs
rust/rust_book/chapter19/parser_ex/: Cargo.toml
rust/rust_book/chapter19/parser_ex/src/: main.rs
rust/rust_book/chapter3/hrtb_ex/: Cargo.toml
rust/rust_book/cons/: Cargo.toml
rust/rust_book/cons/src/: main.rs
rust/rust_book/free/asref_str_slices/: Cargo.toml
rust/rust_book/free/channel/: Cargo.toml
rust/rust_book/free/funky_op_overload/: Cargo.toml
rust/rust_book/free/funky_op_overload/src/: main.rs
rust/rust_book/free/rc_cons/src/: main.rs
rust/rust_book/free/state/src/: main.rs
rust/rust_book/free/thread_counter/src/: main.rs
rust/rust_book/free/thread_join/: Cargo.toml
rust/rust_book/free/traits_as_lifetimes/: Cargo.toml
rust/rust_book/rc_cons/: Cargo.toml
rust/rust_book/refcell_mock/: Cargo.toml
rust/rust_book/refcell_mock/src/: main.rs
rust/rust_book/state/: Cargo.toml
rust/rust_book/state/src/: main.rs
rust/rust_book/state_type/: Cargo.toml
rust/rust_book/state_type/src/: main.rs
rust/rust_book/thread_counter/: Cargo.toml
rust/rust_book/thread_join/shared_thread/: Cargo.toml
rust/tests/inner_double_mut_burrow/: Cargo.toml
rust/tests/inner_double_mut_burrow/src/: main.rs
rust/wc/assets/: test
rust/wc/src/: main.rs
spirit/HelloWorld/src/: main.cpp
spirit/Roman/src/: main.cpp
spirit/VecParse/assets/: input
spirit/VecParse/src/: main.cpp  utils.h
tests/BaseHoldType/: compile_commands.json
tests/BaseHoldType/src/: main.cpp
(+3 files in other folders)
